feat: Redesign blog UI

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Github Page demo</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="custom.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/custom.css" />
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:700" rel="stylesheet">
-    <script src="index.js"></script>
 </head>
 <body>
     <div class="container">
@@ -21,15 +20,13 @@
         </header>
 
         <div class="main-content">
-            {% for post in site.posts %}
-                <div class="post">
-                    <h2 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                    <p class="meta">{{ post.date | date: "%B %d, %Y" }}</p>
-                    <div class="content">
-                        {{ post.excerpt }}
-                    </div>
+            <div class="post">
+                <h2 class="title">{{ page.title }}</h2>
+                <p class="meta">{{ page.date | date: "%B %d, %Y" }}</p>
+                <div class="content">
+                    {{ content }}
                 </div>
-            {% endfor %}
+            </div>
         </div>
 
         <aside class="sidebar">
