refactor: Remove plugin dependency for collections

--- a/_layouts/group_page.html
+++ b/_layouts/group_page.html
@@ -36,14 +36,21 @@ layout: default
 }
 </style>
 
+{% assign current_group = nil %}
+{% for group in site.data.homepage_groups %}
+    {% if group.group_name == page.title %}
+        {% assign current_group = group %}
+    {% endif %}
+{% endfor %}
+
 <!-- Page Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}{{ page.header-img }}')">
+<header class="intro-header" style="background-image: url('{{ site.baseurl }}{{ current_group.group_image }}')">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading">
-                    <h1>{{ page.title }}</h1>
-                    <span class="subheading">{{ page.description }}</span>
+                    <h1>{{ current_group.group_name }}</h1>
+                    <span class="subheading">{{ current_group.group_description }}</span>
                 </div>
             </div>
         </div>
@@ -54,20 +61,24 @@ layout: default
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            {% for post_filename in page.posts %}
-                {% for post in site.posts %}
-                    {% assign post_name_from_path = post.path | split: '/' | last %}
-                    {% if post_name_from_path == post_filename %}
-                        <div class="post-card">
-                            <a href="{{ post.url | prepend: site.baseurl }}">
-                                <h2>{{ post.title }}</h2>
-                                <p class="post-meta">Posted on {{ post.date | date: "%B %-d, %Y" }}</p>
-                                <p class="post-excerpt">{{ post.content | strip_html | truncate:150 }}</p>
-                            </a>
-                        </div>
-                    {% endif %}
+            {% if current_group %}
+                {% for post_filename in current_group.posts %}
+                    {% for post in site.posts %}
+                        {% assign post_name_from_path = post.path | split: '/' | last %}
+                        {% if post_name_from_path == post_filename %}
+                            <div class="post-card">
+                                <a href="{{ post.url | prepend: site.baseurl }}">
+                                    <h2>{{ post.title }}</h2>
+                                    <p class="post-meta">Posted on {{ post.date | date: "%B %-d, %Y" }}</p>
+                                    <p class="post-excerpt">{{ post.content | strip_html | truncate:150 }}</p>
+                                </a>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
+            {% else %}
+                <p>Error: Could not find group data for "{{ page.title }}".</p>
+            {% endif %}
         </div>
     </div>
 </div>
