feat: Implement order control for navigation bar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,8 @@
                     <li>
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
-                    {% for page in site.pages %}{% if page.title %}
+                    {% assign pages = site.pages | sort: "nav-order" %}
+                    {% for page in pages %}{% if page.title %}
                     <li>
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                     </li>
