--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ Find the group background image for the current post.
 
 
 <!-- Post Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}{{ final_header_img }}')"></header>
+<header class="intro-header" style="background-image: url('{{ site.baseurl }}{{ final_header_img }}')">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
