--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,4 +52,27 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    <!-- Service Worker -->
+    {% if site.service-worker %}
+    <link rel="manifest" href="{{ '/pwa/manifest.json' | prepend: site.baseurl }}">
+    <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
+    {% endif %}
+
+    <!-- MathJax Support -->
+    <script>
+      window.MathJax = {
+        tex: {
+          inlineMath: [['
+], ['\\(', '\\)']],
+          displayMath: [['$', '$'], ['\\[', '\\]']],
+          processEscapes: true,
+          processEnvironments: true
+        },
+        options: {
+          skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+        }
+      };
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
+
 </head>
