--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,6 +73,6 @@
         }
       };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" async></script>
+    <script src="{{ "/js/mathjax.js" | prepend: site.baseurl }}" id="MathJax-script" async></script>
 
 </head>
