fix: Move MathJax script to footer for better loading

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -268,3 +268,20 @@
 </script>
 {% endif %}
 
+<!-- MathJax Support -->
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']],
+      processEscapes: true,
+      processEnvironments: true
+    },
+    options: {
+      skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+    }
+  };
+</script>
+<script src="{{ "/js/mathjax.js" | prepend: site.baseurl }}" id="MathJax-script" async></script>
+
+
